added 2 endpoints to retrieve filtered information for big order table